Integrate UserCommands